--- a/html/index.html
+++ b/html/index.html
@@ -39,8 +39,8 @@
     <section id="hero" class="hero align-items-stretch">
       <div class="hero d-flex flex-column justify-content-ceneter align-items-center">
         <img class="hero-img" src="/assets/img/copiaimg.jpeg" alt="Me">
-        <h1 id="title"></h1>
-        <h2 id="title-2"></h2>
+        <h1 id="title" data-aos="fade-up">David Requeno</h1>
+        <h2 id="title-2" data-aos="fade-up">Desarollador web</h2>
       </div>
       <div class="hero-inferior">
         <img class="inferior-img img-fluid" src="https://mattfarley.ca/img/hero-devices.svg" alt="descripcion" srcset="">
@@ -290,7 +290,6 @@
     </script>
 
 </body>
-<script src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js"></script>
 <script src="/js/index.js" defer></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </html>
