Proyecto dos agregado

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
           <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
             <div class="proyecto-2">
-              <img src="/assets/img/proyecto1.png" alt="Proyeco 1" srcset="">
+              <img src="/assets/img/rick.png" alt="Proyeco 1" srcset="">
               <div class="overlay">
                 <p>Proyecto 1</p>
                 <div class="iconos">
@@ -123,15 +123,15 @@
 
           <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
             <div class="proyecto-2">
-              <img src="/assets/img/proyecto2.png" alt="Proyeco 1" srcset="">
+              <img src="/assets/img/movie.jpg" alt="Proyeco 1" srcset="">
               <div class="overlay">
                 <p>Proyecto 2</p>
                 <div class="iconos">
-                  <a href="#" target="_blank" rel="noopener noreferrer">
+                  <a href="https://github.com/DavidReque/Movies-API" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
                   <a href="#">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
+                    <a href="https://toppmovies.netlify.app/" target="_blank" rel="noopener noreferrer">
                       <i class="bi bi-laptop"></i>
                   </a>
                 </div>
@@ -273,7 +273,7 @@
           <i class="bi bi-linkedin"></i>
         </a>
       </div>
-      <div class="derechos-de">Creado por David Requeno 2022 &#169;</div>
+      <div class="derechos-de">Creado por David Requeno 2023 &#169;</div>
     </footer>
         </div>
     </div>
