--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
           <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
             <div class="proyecto-2">
-              <img src="/assets/img/movie.jpg" alt="Proyeco 1" srcset="">
+              <img src="/assets/img/movie.png" alt="Proyeco 1" srcset="">
               <div class="overlay">
                 <p>Proyecto 2</p>
                 <div class="iconos">
