--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
               Contactame
             </div>
             <div class="col-12 col-md-4" data-aos="fade-up">
-              <a href="mailto:davidrequeno52@gmail.com">
+              <a href="/form.html">
                 <button type="button" class="btn btn-primary">
                   Contacto
                   <i class="bi bi-envelope"></i>
