--- a/form.html
+++ b/form.html
@@ -42,7 +42,7 @@
 
     <section class="formulario">
 
-      <form action="" method="post">
+      <form name="contact" netlify>
         
         <div class="section-inputs">
           <label for="name">
