--- a/form.html
+++ b/form.html
@@ -34,7 +34,7 @@
 
     <section class="hero-form align-items-stretch">
         <div class="hero-form d-flex flex-column justify-content-center align-items-center">
-          <h1 id="title-form" data-aos="fade-up">How can I help you today?</h1>
+          <h1 id="title-form" data-aos="fade-up">¿Cómo puedo ayudarte hoy?</h1>
         </div>
       </section>
 
