--- a/index.html
+++ b/index.html
@@ -105,15 +105,14 @@
 
           <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
             <div class="proyecto-2">
-              <img src="/assets/img/rick.png" alt="Proyeco 1" srcset="">
+              <img src="/assets/img/coin.jpg" alt="Proyeco 1" srcset="">
               <div class="overlay">
                 <p>Proyecto 1</p>
                 <div class="iconos">
-                  <a href="https://github.com/DavidReque/rickandmortyapi/tree/master" target="_blank" rel="noopener noreferrer">
+                  <a href="https://github.com/DavidReque/coibaseclon" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
-                  <a href="#">
-                    <a href="https://rickkandmortyyapii.netlify.app/" target="_blank" rel="noopener noreferrer">
+                    <a href="https://coinbaseclon.netlify.app" target="_blank" rel="noopener noreferrer">
                       <i class="bi bi-laptop"></i>
                   </a>
                 </div>
@@ -141,69 +140,14 @@
 
           <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
             <div class="proyecto-2">
-              <img src="/assets/img/proyecto3.png" alt="Proyeco 1" srcset="">
+              <img src="/assets/img/rick.png" alt="Proyeco 1" srcset="">
               <div class="overlay">
                 <p>Proyecto 3</p>
                 <div class="iconos">
-                  <a href="#" target="_blank" rel="noopener noreferrer">
+                  <a href="https://github.com/DavidReque/rickandmortyapi/tree/master" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
-                  <a href="#">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                      <i class="bi bi-laptop"></i>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
-            <div class="proyecto-2">
-              <img src="/assets/img/proyecto4.png" alt="Proyeco 1" srcset="">
-              <div class="overlay">
-                <p>Proyecto 4</p>
-                <div class="iconos">
-                  <a href="#" target="_blank" rel="noopener noreferrer">
-                    <i class="bi bi-github"></i>
-                  </a>
-                  <a href="#">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                      <i class="bi bi-laptop"></i>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
-            <div class="proyecto-2">
-              <img src="/assets/img/proyecto5.png" alt="Proyeco 1" srcset="">
-              <div class="overlay">
-                <p>Proyecto 5</p>
-                <div class="iconos">
-                  <a href="#" target="_blank" rel="noopener noreferrer">
-                    <i class="bi bi-github"></i>
-                  </a>
-                  <a href="#">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
-                      <i class="bi bi-laptop"></i>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
-            <div class="proyecto-2">
-              <img src="/assets/img/proyecto6.png" alt="Proyeco 1" srcset="">
-              <div class="overlay">
-                <p>Proyecto 6</p>
-                <div class="iconos">
-                  <a href="#" target="_blank" rel="noopener noreferrer">
-                    <i class="bi bi-github"></i>
-                  </a>
-                  <a href="#">
-                    <a href="#" target="_blank" rel="noopener noreferrer">
+                    <a href="https://rickkandmortyyapii.netlify.app" target="_blank" rel="noopener noreferrer">
                       <i class="bi bi-laptop"></i>
                   </a>
                 </div>
