--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div class="container text-center rectangulo d-flex justify-content-evenly">
           <div class="row">
             <div class="col-12 col-md-4 seccion-titulo" data-aos="fade-up">
-              <a href="/assets/Curriculum David Requeno.pdf" target="_blank">
+              <a href="/assets/Curriculum David Requeno  A4.docx" target="_blank">
                 <button type="button" class="btn btn-primary" >Descargar cr</button>
               </a>
             </div>
